Mon Aug  3 13:49:12 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/namespace.rb: bug fix

	* ext/tk/lib/tkextlib/treectrl/tktreectrl.rb: add Tk::TreeCtrl.loupe

Mon Aug  2 23:33:48 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/test_file.rb (test_fnmatch): added more tests.

Mon Aug  2 18:04:21 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/msgcat.rb (set_translation): bug fix (fail to set
	  trans_str to the same as src_str when trans_str is not given.)

Mon Aug  2 17:40:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (blk_free): fixed serious memory leak. [ruby-dev:24013]

Mon Aug  2 11:53:06 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/code_objects.rb (RDoc::Context::find_symbol): Fix infinite recursion
	  looking up some top level symbols (batsman)

Mon Aug  2 11:48:29 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::do_methods): Allow '.'s in
	  variable names to support SWIG generated files (Hans Fugal)

Sat Jul 31 23:08:00 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): stupid mistakes fixed. [ruby-dev:24006]
	
Sat Jul 31 17:39:47 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-expr-beg, ruby-parse-partial,
	  ruby-calculate-indent, ruby-move-to-block, ruby-forward-sexp,
	  ruby-backward-sexp): keywords must match word-wise.

Sat Jul 31 13:37:51 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): avoid unnecessary method invocations.

Sat Jul 31 05:35:37 2004  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/rubytypes.rb: exceptions were using an older
	  YAML.object_maker. [ruby-core:03080]

	* ext/syck/token.c (sycklex_yaml_utf8): using newline_len to
	  handline CR-LFs.  "\000" was showing up on folded blocks which
	  stopped at EOF.

Sat Jul 31 01:25:11 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (is_defined): call is_defined() before invoking