@@ -1,5 +1,6 @@
 require 'test/unit/testsuite'
 require 'test/unit/testcase'
+require 'stringio'
 
 begin
   require 'zlib'
@@ -7,6 +8,13 @@ rescue LoadError
 end
 
 if defined? Zlib
+  class TestZlibGzipReader < Test::Unit::TestCase
+    D0 = "\037\213\010\000S`\017A\000\003\003\000\000\000\000\000\000\000\000\000"
+    def test_read0
+      assert_equal("", Zlib::GzipReader.new(StringIO.new(D0)).read(0))
+    end
+  end
+
   class TestZlibGzipWriter < Test::Unit::TestCase
     def test_invalid_new
       # [ruby-dev:23228]
